2001-04-05  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-canvas-note-item.c:
	(nautilus_canvas_note_item_set_note_text), (draw_item_aa_text),
	(nautilus_canvas_note_item_draw):
	improved the note sizing, by actually measuring the text and
	adjusting for the canvas scale factor.
	
	* libnautilus-extensions/nautilus-icon-canvas-item.c: (hit_test):
	made hit-testing prefer emblems when they overlap the icon, since
	they're visually on top.
	
2001-04-04  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-annotation.c:
	(nautilus_annotation_add_annotation):
	if there is no annotation text, delete the annotation.
	
	* libnautilus-extensions/nautilus-icon-canvas-item.c:
	(create_annotation):
	changed the annotation color/transparency to be more saturated,
	as specified by Arlo.
	
2001-04-04  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-canvas-note-item.c:
	(update_item_bounding_box), (draw_item_aa_text),
	(nautilus_canvas_note_item_update):
	fixed the partial drawing problems in aa-mode plus
	other tweaks.
	
	* libnautilus-extensions/nautilus-icon-canvas-item.c:
	(nautilus_icon_canvas_item_initialize), (remove_annotation),
	(create_annotation_timeout_callback),
	(nautilus_icon_canvas_item_set_note_state),
	(nautilus_icon_canvas_item_event):
	made annotations appear only if you linger over the emblem
	for at least one second.
	
2001-04-03  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-canvas-note-item.c: (get_bounds),
	(update_item_bounding_box),
	(nautilus_canvas_note_item_set_note_text),
	(nautilus_canvas_note_item_set_arg),
	(nautilus_canvas_note_item_get_arg),
	(nautilus_canvas_note_item_translate),
	(nautilus_canvas_note_item_bounds),
	(nautilus_canvas_note_item_draw),
	(nautilus_canvas_note_item_point),
	(nautilus_canvas_note_item_update):
	* libnautilus-extensions/nautilus-canvas-note-item.h:
	some more work at making the annotations show up properly, but