@@ -1,5 +1,11 @@
 2001-04-05  Andy Hertzfeld  <andy@eazel.com>
 
+	* libnautilus-extensions/nautilus-icon-canvas-item.c:
+	(create_annotation), (nautilus_icon_canvas_item_set_note_state):
+	tweaked the transparency and timeout values.
+	
+2001-04-05  Andy Hertzfeld  <andy@eazel.com>
+
 	* libnautilus-extensions/nautilus-canvas-note-item.c:
 	(nautilus_canvas_note_item_set_note_text), (draw_item_aa_text),
 	(nautilus_canvas_note_item_draw):
